added some color to page

--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="global.css">
 </head>
 <body>
     <img src="./imgSplash.jpg" alt-"Computer" />
-    <section>
+    <section id="info">
         <h1>Boutique Builds</h1>
         <p>Catered to your needs</p>
     </section>
+    <form>
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" />
+        <button>Submit</button>
+    </form>
 </body>
-<form>
-    <label for="email">Email</label>
-    <input type='email'
-</form>
+
 </html>
